--- a/Artículos, tendencias y más.html
+++ b/Artículos, tendencias y más.html
@@ -30,6 +30,12 @@
             }
             /* Puedes agregar más estilos específicos para dispositivos móviles aquí */
         }
+            
+        section p {
+            font-size: 24px; /* Tamaño de fuente más grande */
+            font-weight: bold; /* Texto en negrita */
+            text-decoration: underline; /* Texto subrayado */
+        }
 
     </style>
 </head>
