--- a/Artículos, tendencias y más.html
+++ b/Artículos, tendencias y más.html
@@ -46,7 +46,7 @@
     </header>
 
     <section id="Artículos, tendecias y más">
-        <p><b><u>Cristal Clear, Jabón cristalino</u></b></p>
+        <p><b><u>21/09/2023 Cristal Clear, Jabón cristalino</u></b></p>
         <h2><a href="Artículos.html">Ver más</a></h2>
         <!-- Agrega más contenido aquí -->
         <h2><a href="index.html">Atrás</a></h2>
