--- a/Artículos.html
+++ b/Artículos.html
@@ -40,7 +40,7 @@
 
     <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
-        <p>21/09/2023 Cristal Clear, Jabón cristalino</p>
+        <p>Cristal Clear, Jabón cristalino</p>
         <img src="https://i.imgur.com/TlcBqoF.png" alt=" Artículo 1" style="max-height: 1500px">
         <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
