--- a/Artículos, tendencias y más.html
+++ b/Artículos, tendencias y más.html
@@ -32,7 +32,7 @@
         }
             
         section p {
-            font-size: 60px; /* Tamaño de fuente más grande */
+            font-size: 50px; /* Tamaño de fuente más grande */
             font-weight: bold; /* Texto en negrita */
             text-decoration: underline; /* Texto subrayado */
         }
@@ -47,6 +47,8 @@
 
     <section id="Artículos, tendecias y más">
         <p><b><u>21/09/2023 Cristal Clear, Jabón cristalino</u></b></p>
+        <h2><a href="Artículos.html">Ver más</a></h2>
+        <p><b><u>22/09/2023 Crioterapia</u></b></p>
         <h2><a href="Artículos.html">Ver más</a></h2>
         <!-- Agrega más contenido aquí -->
         <h2><a href="index.html">Atrás</a></h2>
