--- a/Artículos.html
+++ b/Artículos.html
@@ -43,7 +43,7 @@
         <p>Cristal Clear, Jabón cristalino</p>
         <img src="https://i.imgur.com/TlcBqoF.png" alt=" Artículo 1" style="max-height: 1500px">
         <!-- Fin de la imagen -->
-        <h2><a href="index.html">Atrás</a></h2>
+        <h2><a href="Artículos, tendencias y más.html">Atrás</a></h2>
     </section>
 
     <!-- Resto de tu código HTML ... -->
