--- a/Crioterapia.html
+++ b/Crioterapia.html
@@ -12,7 +12,6 @@
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
-            background-image: url('https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias" class="imagen-comun');
             background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
             background-repeat: no-repeat; /* Evitará la repetición de la imagen */
         }
@@ -30,12 +29,6 @@
             }
             /* Puedes agregar más estilos específicos para dispositivos móviles aquí */
         }
-            
-        section p {
-            font-size: 50px; /* Tamaño de fuente más grande */
-            font-weight: bold; /* Texto en negrita */
-            text-decoration: underline; /* Texto subrayado */
-        }
 
     </style>
 </head>
@@ -45,13 +38,11 @@
         <h1>Artículos, tendencias y más</h1>
     </header>
 
-    <section id="Artículos, tendecias y más">
-        <p><b><u>21/09/2023 Cristal Clear, Jabón cristalino</u></b></p>
-        <h2><a href="Artículos.html">Ver más</a></h2>
-        <p><b><u>22/09/2023 Crioterapia</u></b></p>
-        <h2><a href="Crioterapia.html">Ver más</a></h2>
-        <!-- Agrega más contenido aquí -->
-        <h2><a href="index.html">Atrás</a></h2>
+    <section id="Articulos, tendencias y más  ">
+        <p>Crioterapia</p>
+        <img src="https://i.imgur.com/VD0TRc9.png" alt=" Artículo 1" style="max-height: 1500px">
+        <!-- Fin de la imagen -->
+        <h2><a href="Artículos, tendencias y más.html">Atrás</a></h2>
     </section>
 
     <!-- Resto de tu código HTML ... -->
